<resources>
    <string name="app_name">BudgetUp</string>
    <string name="skip">skip</string>
    <string name="next">next</string>
    <string name="profile">Profile</string>
    <string name="hi">Hi, %1$s!</string>
    <string name="user">User</string>
    <string name="user_email">User Email</string>
    <string name="google">Google account</string>
    <string name="google_title">Backup &amp; Restore</string>
    <string name="google_desc">Synchronize your data</string>
    <string name="sync">Google account sync</string>
    <string name="setting">Settings</string>
    <string name="language">Language</string>
    <string name="share">Share with friends</string>
    <string name="questions">FAQ &amp; Questions</string>
    <string name="delete">Delete all data</string>
    <string name="delete_desc">All data will be removed, include your data synchronized on the cloud</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="login_title">Log in</string>
    <string name="titleEmail">E-mail</string>
    <string name="titleName">Name</string>
    <string name="infoTitle">Info</string>
    <string name="ent_email">e-mail</string>
    <string name="ent_pass">password</string>
    <string name="ent_name">name</string>
    <string name="regist_title">Registration</string>
    <string name="titlePassword">Password</string>
    <string name="today">Today</string>
    <string name="expense_name">Magnit</string>
    <string name="no_exp_today">You need at least 1 day’s expenses data to unlock you budget statistics</string>
    <string name="track_now">track now</string>
    <string name="month">May</string>
    <string name="month_day">30</string>
    <string name="expense">Expenses</string>
    <string name="count">1500 RUB</string>
    <string name="week">Mon</string>
    <string name="average">Average</string>
    <string name="min">min</string>
    <string name="category_title">Category: %1$s</string>
    <string name="year">2023</string>
    <string name="monthTitle">Month</string>
    <string name="weekTitle">Week</string>
    <string name="add_income">Income</string>
    <string name="add_expense">Expense</string>
    <string name="rus">Русский</string>
    <string name="eng">English</string>
    <string name="language_title">Choose language</string>
    <string name="lng_change">Language changed successful!</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_et">Feedback or suggestion</string>
    <string name="send">send</string>
    <string name="share_email">My budget monitoring and planning skills have improved significantly with \'Budget Up\'! Download it now and you\'ll see the changes, too. https://github.com/igum-natasha/BudgetUp</string>
    <string name="new_income">New income</string>
    <string name="new_csv">New Excel data</string>
    <string name="new_expense">New expense</string>
    <string name="ent_income">Income value</string>
    <string name="ent_expense">Expense value</string>
    <string name="date_exmp">Wednesday, May 26</string>
    <string name="menu_title">Select payment</string>
    <string name="note">Enter name</string>
    <string name="message">Enter message</string>
    <string name="card">Enter last 4 chars of the card</string>
    <string name="ch_category">Choose category</string>
    <string name="login_suc">Login successful!</string>
    <string name="login_fail">Login failed with error! Try again!</string>
    <string name="regist_fail">Registration failed! Please fill all fields!</string>
    <string name="regist_fail_email">Registration failed! user with email %1$s already exists!</string>
    <string name="regist_suc">Registration successful!</string>
    <string name="delete_suc">Data delete successful!</string>
    <string name="deposits">Deposits</string>
    <string name="salary">Salary</string>
    <string name="savings">Savings</string>
    <string name="car">Car</string>
    <string name="communications">Phone</string>
    <string name="restaurants">Cafe</string>
    <string name="clothes">Clothes</string>
    <string name="gifts">Gifts</string>
    <string name="food">Food</string>
    <string name="health">Health</string>
    <string name="house">House</string>
    <string name="sports">Sports</string>
    <string name="pets">Pets</string>
    <string name="services">Services</string>
    <string name="transport">Transport</string>
    <string name="entertainment">Pastime</string>
    <string name="others">Others</string>
    <string name="expense_add_suc">Expense has been added successfully!</string>
    <string name="income_add_suc">Income has been added successfully!</string>
    <string name="no_info">No information</string>
    <string name="no_info_short">No info</string>
    <string name="add_bank">Info from bank</string>
    <string name="choose_bank">Choose bank</string>
    <string name="add_file">OR add Excel file</string>
    <string name="select_file">Select Excel file</string>
    <string name="submit">Submit</string>
    <string name="add_success">Add data successfully!</string>
    <string name="add_fail">Add data failed!</string>
    <string name="upload_title">Choose File to Upload..</string>
    <string name="select_path">Selected File Path:\n%1$s</string>
    <string name="fill_field">Please fill fields</string>
    <string name="journal">Journal</string>
    <string name="statistic">Statistics</string>
    <string name="cr_card">Credit card</string>
    <string name="cash">Cash</string>
    <string name="notification_title">What did you do this week?</string>
    <string name="notification_desc">Add information about your budget!</string>
    <string name="new_notification">New notification</string>
    <string name="notification">Notifications</string>
    <string name="errorGoogle">Google: something went wrong</string>
    <string name="backup">Backup copying</string>
    <string name="recovery">Data recovery</string>



    <string name="title_onboarding1">Painless budgeting</string>
    <string name="title_onboarding2">The whole picture in one place</string>
    <string name="title_onboarding3">Analysis of data for any period of time</string>

    <string name="desc_onboarding1">Control expenses for different categories. It takes seconds to record daily transactions</string>
    <string name="desc_onboarding2">One report to give a clear view on your spending patterns </string>
    <string name="desc_onboarding3">Easily and quickly analysis your expenses and profit</string>
</resources>