<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/base_50">


    <TextView
        android:id="@+id/categTitle"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:fontFamily="@font/poppins"
        android:text="@string/ch_category"
        android:textColor="@color/base_700"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/closeIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@color/base_50"
        android:scaleType="fitCenter"
        android:src="@drawable/close"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/base_700" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/base_50"
        android:orientation="vertical"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/categTitle">
        <RadioButton
            android:id="@+id/radioDep"
            android:layout_height="24dp"
            android:layout_width="wrap_content"
            android:text="@string/deposits"
            android:fontFamily="@font/poppins"
            android:textColor="@color/base_900"
            android:textSize="16sp"
            android:layout_margin="4dp"/>
        <RadioButton
            android:id="@+id/radioSal"
            android:layout_height="24dp"
            android:layout_width="wrap_content"
            android:text="@string/salary"
            android:fontFamily="@font/poppins"
            android:textColor="@color/base_900"
            android:textSize="16sp"
            android:layout_margin="4dp"/>
        <RadioButton
            android:id="@+id/radioSav"
            android:layout_height="24dp"
            android:layout_width="wrap_content"
            android:text="@string/savings"
            android:fontFamily="@font/poppins"
            android:textColor="@color/base_900"
            android:textSize="16sp"
            android:layout_margin="4dp"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>