<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">
    <include
        android:id="@+id/include"
        layout="@layout/registration_toolbar" />

    <ImageView
        android:layout_width="500dp"
        android:layout_height="500dp"
        android:layout_marginTop="100dp"
        android:alpha="0.6"
        android:background="@drawable/registration_screen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUserRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="110dp"
        android:text="@string/sign_up"
        android:textColorHint="@color/base_600"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="242dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/titleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/titleName"
            android:textColor="@color/base_900"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ent_name"
            android:background="@drawable/background_edit_text"
            android:fontFamily="@font/poppins"
            android:paddingStart="8dp"
            android:textSize="16sp"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="MissingConstraints" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/titleEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/titleEmail"
            android:textColor="@color/base_900"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etRegEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/background_edit_text"
            android:hint="@string/ent_email"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:minHeight="48dp"
            android:fontFamily="@font/poppins"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/titlePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/titlePassword"
            android:textColor="@color/base_900"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edit_text"
            android:ems="10"
            android:hint="@string/ent_pass"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:minHeight="48dp"
            android:fontFamily="@font/poppins"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
