<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">
    <include
        android:id="@+id/include"
        layout="@layout/home_toolbar" />
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvToday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:textColor="@color/base_900"
        android:text="@string/today"
        app:layout_constraintTop_toBottomOf="@id/pieChart"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.loopeer.shadow.ShadowView
        android:id="@+id/shadowView"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvToday"
        app:shadowMargin="8dp"
        app:shadowRadius="8dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
    </com.loopeer.shadow.ShadowView>

    <TextView
        android:id="@+id/tvInfoExp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:textColor="@color/base_600"
        android:textSize="18sp"
        android:text="@string/no_exp_today"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvToday" />

    <Button
        android:id="@+id/btnTrack"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_primary"
        android:text="@string/track_now"
        android:textColor="@color/base_50"
        android:textSize="16sp"
        android:fontFamily="@font/poppins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoExp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/button_navigation"/>
</androidx.constraintlayout.widget.ConstraintLayout>